--- a/index.html
+++ b/index.html
@@ -82,28 +82,28 @@ exclude-nav: true
       <div class="piliers-item col-lg-6 col-md-12 d-inline-flex justify-content-around align-items-center">
         <img alt="" src="/assets/images/website/page-index/piliers/Puzzle.svg"/>
         <div class="piliers-text">
-          <h3>Engagement</h3>
+          <p class="title">Engagement</p>
           <p class="text-grey">Pertinence dans les choix, respect des objectifs, capacité à “leader” les projets</p>
         </div>
       </div>
       <div class="piliers-item col-lg-6 col-md-12 d-inline-flex justify-content-around align-items-center">
         <img alt="" src="/assets/images/website/page-index/piliers/Handshake.svg"/>
         <div class="piliers-text">
-          <h3>Collaboration</h3>
+          <p class="title">Collaboration</p>
           <p class="text-grey">C’est le coeur de notre approche : nous adorons partager et confronter les points de vue pour en tirer le meilleur</p>
         </div>
       </div>
       <div class="piliers-item col-lg-6 col-md-12 d-inline-flex justify-content-around align-items-center">
         <img alt="" src="/assets/images/website/page-index/piliers/Target.svg"/>
         <div class="piliers-text">
-          <h3>Pragmatisme</h3>
+          <p class="title">Pragmatisme</p>
           <p class="text-grey">Nous avons l’ambition de faire simple et efficace dans la durée</p>
         </div>
       </div>
       <div class="piliers-item col-lg-6 col-md-12 d-inline-flex justify-content-around align-items-center">
         <img alt="" src="/assets/images/website/page-index/piliers/Handing-key.svg"/>
         <div class="piliers-text">
-          <h3>Confiance</h3>
+          <p class="title">Confiance</p>
           <p class="text-grey">C’est la base des relations que nous construisons au sein de l’équipe DEVmachine et avec nos clients</p>
         </div>
       </div>
@@ -212,7 +212,10 @@ exclude-nav: true
       <div class="col-md-6 col-sm-12 text-center text-blue">
         <h2>En savoir plus sur DEVmachine</h2>
         <p>Co-construction, RSE, locaux, équipe, etc...</p>
-        <a class="dm-btn dm-btn-orange" href="/dev-machine"><span aria-hidden="true" class="fas fa-chevron-right"></span></a>
+        <a class="dm-btn dm-btn-orange" href="/dev-machine">
+          <p class="sr-only">En savoir plus</p>
+          <span aria-hidden="true" class="fas fa-chevron-right"></span>
+        </a>
       </div>
     </div>
   </div>
