--- a/pages/recrutement.html
+++ b/pages/recrutement.html
@@ -42,7 +42,7 @@ order: 6
       <div class="col-lg-6 col-md-12 m-0 p-3">
         <div class="recrutement-post h-100">
           <div class="heading">
-            <h4>Développeur JavaScript full-stack</h4>
+            <p class="title">Développeur JavaScript full-stack</p>
           </div>
 
           <div class="d-flex contract-data">
@@ -81,7 +81,7 @@ order: 6
       <div class="col-lg-6 col-md-12 m-0 p-3">
         <div class="recrutement-post h-100">
           <div class="heading">
-            <h4>Développeur Java / JavaScript</h4>
+            <p class="title">Développeur Java / JavaScript</p>
           </div>
 
           <div class="d-flex contract-data">
