--- a/pages/savoir-faire.html
+++ b/pages/savoir-faire.html
@@ -66,7 +66,6 @@ order: 2
           <p>L’ensemble de l’équipe DEVmachine est sensibilisée à l’éco-conception.</p>
           <p>Cela s’applique dès la conception fonctionnelle, les fonctionnalités doivent répondre au besoin mais il faut éviter les fonctionnalités superflues ou celles dont l’usage est incertain. Nous conseillons une approche itérative pour adapter le besoin aux retours utilisateurs et avoir un produit optimisé, sobre et pertinent.</p>
           <p>Ensuite, durant le développement, nous optimisons la conception pour réduire les ressources informatiques. Nous utilisons également des outils en ligne (rapport de console google, ecoindex.fr, ecometer.org, ...) pour auditer la plateforme durant la phase de développement et améliorer le score obtenu.</p>
-</p>
         {% endcollapsible %}
       {% endaccordion %}
     </div>
@@ -83,7 +82,10 @@ order: 2
       <div class="col-md-6 col-sm-12 text-center text-blue">
         <h2>En savoir plus sur DEVmachine</h2>
         <p>Co-construction, RSE, locaux, équipe, etc...</p>
-        <a class="dm-btn dm-btn-orange" href="/dev-machine"><span aria-hidden="true" class="fas fa-chevron-right"></span></a>
+        <a class="dm-btn dm-btn-orange" href="/dev-machine">
+          <p class="sr-only">En savoir plus</p>
+          <span aria-hidden="true" class="fas fa-chevron-right"></span>
+        </a>
       </div>
     </div>
   </div>
