fix: email name form

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -52,7 +52,7 @@ order: 4
       <!-- Mail -->
       <div class="mb-3">
         <label class="form-label" for="email">Votre mail :</label>
-        <input class="form-control" id="email" email="name" type="email" required />
+        <input class="form-control" id="email" name="email" type="email" required />
       </div>
       <!-- Text -->
       <div class="mb-3">
