--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,8 +10,8 @@ order: 4
       <div class="col-md-6 col-sm-12">
         <div>
           <h1 class="section-heading">Contactez-nous</h1>
-          <p class="text-grey">N'hésitez-pas, nous sommes toujours ravis de partager sur notre activité, et répondons systématiquement :</p>
-          <ul class="arrow-list text-blue">
+          <p><b>N'hésitez pas, nous sommes toujours ravis de partager sur notre activité, et répondons systématiquement :</b></p>
+          <ul class="arrow-list text-grey">
             <li>Une étude ou un projet que l’on pourrait accompagner ?</li>
             <li>L’envie de nous rejoindre ?</li>
             <li>Ou simplement d’en savoir plus</li>
@@ -34,7 +34,7 @@ order: 4
 
   <div class="container">
     <div class="row">
-      <h1 class="section-heading">Contactez-nous</h1>
+      <h1 class="section-heading">Coordonnées / message</h1>
     </div>
 
     <form
