--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -10,8 +10,8 @@ order: 3
       <div class="col-md-6 col-sm-12">
         <div>
           <h1 class="section-heading">En savoir plus sur DEVmachine</h1>
-          <p class="text-grey">DEVmachine a été créée en partageant une vision commune sur :</p>
-          <ul class="arrow-list text-blue">
+          <p><b>DEVmachine a été créée en partageant une vision commune sur :</b></p>
+          <ul class="arrow-list text-grey">
             <li>Un positionnement fort en tant qu’acteur du service numérique, que nous retrouvons dans notre offre de services et nos savoir-faire</li>
             <li>La nécessité de s’appuyer sur un collectif</li>
             <li>Servir et promouvoir le territoire</li>
@@ -21,7 +21,7 @@ order: 3
 
         <div class="row btn-container">
           <a class="dm-btn dm-btn-blue" href="/contact">Contactez-nous</a>
-          <a class="dm-btn dm-btn-orange" href="/savoir-faire">Le savoir-faire DEVmachine</a>
+          <a class="dm-btn dm-btn-orange" href="/savoir-faire">Découvrir nos savoir-faire</a>
           <a class="dm-btn dm-btn-white" href="/offre">Parcourir notre offre</a>
         </div>
       </div>
@@ -111,7 +111,7 @@ order: 3
 
     <div class="row align-items-center dm-item sm-reverse">
       <div class="col-md-3 offset-md-2 col-sm-12 offset-sm-0 text-center">
-        <img class="produit-bretagne" alt="" src="/assets/images/website/page-dm/servir/produit-bretagne.png"/>
+        <img class="produit-bretagne" alt="" src="/assets/images/website/page-dm/servir/produit-bretagne2.png"/>
       </div>
       <div class="col-md-6 col-sm-12">
         <h2>Adhérent "Produit en Bretagne"</h2>
@@ -125,7 +125,7 @@ order: 3
       <div class="col-md-8 col-sm-12">
         <h2>Des clients majoritairement bretons</h2>
         <p class="text-justify">Nos clients sont majoritairement présents sur le territoire breton : Ille-et-Vilaine, Côtes d’Armor, Morbihan, Loire-Atlantique.</p>
-        <p>Par opportunités, nous développons aussi nos savoir-faire dans d’autres régions (Île-de-France, Rhône-Alpes, Paca), et les exportons même sur d’autres continents (Océanie et Afrique).</p>
+        <p>Par opportunité, nous développons aussi nos savoir-faire dans d’autres régions (Île-de-France, Rhône-Alpes, Paca), et les exportons même sur d’autres continents (Océanie et Afrique).</p>
       </div>
       <div class="col-md-3 offset-md-1 col-sm-12 text-center">
         <img class="w-100" alt="" src="/assets/images/website/page-dm/servir/Map.svg"/>
@@ -140,6 +140,7 @@ order: 3
       </div>
       <div class="col-md-8 offset-md-1 col-sm-12">
         <h2>Soutien aux associations et réseaux locaux</h2>
+        <p>Parce qu'ils accompagnent et fédèrent l'IT et l'innovation dans la région, DEVmachine soutient ces acteurs.</p>
         <ul class="arrow-list">
           <li><b>Institutionnels</b> : Le Poool, Anticipa, Bretagne Développement Innovation</li>
           <li><b>Professionnels</b> : ADN’Ouest</li>
@@ -154,7 +155,7 @@ order: 3
   <div class="container">
     <div class="row">
       <h1 class="section-heading">Démarche RSE</h1>
-      <h2 class="section-subheading">Nous portons, depuis la création de la société, une attention particulière sur la RSE.</h2>
+      <h2 class="section-subheading">Nous portons, depuis la création de la société, une attention particulière sur la RSE</h2>
       <br/>
       <h2 class="section-subheading">Les actions que nous avons déjà engagées sur les 3 thèmes de la RSE sont les suivantes :</h2>
     </div>
@@ -195,7 +196,7 @@ order: 3
           <p>Santé psychologique</p>
           <div class="rse-onhover-items">
             <ul class="arrow-list">
-              <li>Implication de tous dans la co-construction de DEVmachine, dans la stratégie de développement de DEVmachine (Comité d’Orientation)</li>
+              <li>Implication de tous dans la co-construction de DEVmachine, et dans la stratégie de développement de DEVmachine (Comité d’Orientation)</li>
               <li>Entretiens RH réguliers : rapport d’étonnement à l’arrivée, mi-période d’essai, fin de période d’essai, entretiens RH semestriels, entretiens d’équipes spécifiques aux projets, entretien annuel, …</li>
             </ul>
           </div>
@@ -263,15 +264,15 @@ order: 3
       </div>
       <div class="rse-subitems">
         <span class="col-md-6 col-sm-12 info">
-          <p>DEVmachine fait appel à l’ESAT Utopi</p>
+          <p>Insertion professionnelle</p>
           <div class="rse-onhover-items">
             DEVmachine fait appel à <a href="https://www.adapei35.com/etablissement/esat-rennes-utopi-cesson-sevigne/" target="_blank">Utopi</a> pour les prestations de nettoyage de ses locaux.
           </div>
         </span>
         <span class="col-md-6 col-sm-12 info">
-          <p>DEVmachine reverse tous les ans sa taxe d’apprentissage à l’association FACE (“Fondation Agir Contre l’Exclusion”)</p>
+          <p>Lutte contre l'exclusion</p>
           <div class="rse-onhover-items">
-            <a href="https://www.fondationface.org/" target="_blank">FACE</a> (Fondation Agir Contre l’Exclusion) lutte contre l’exclusion, les discriminations et la pauvreté.
+            Depuis sa création, DEVmachine reverse sa taxe d’apprentissage à l’association <a href="https://www.fondationface.org/" target="_blank">FACE</a> (Fondation Agir Contre l’Exclusion).
           </div>
         </span>
       </div>
