--- a/pages/offre.html
+++ b/pages/offre.html
@@ -16,7 +16,7 @@ order: 1
         </div>
 
         <div class="row btn-container">
-          <a class="dm-btn dm-btn-white" href="/savoir-faire">Le savoir-faire DEVmachine</a>
+          <a class="dm-btn dm-btn-white" href="/savoir-faire">Les savoir-faire DEVmachine</a>
         </div>
 
       </div>
@@ -86,7 +86,8 @@ order: 1
             <span class="info-icon">i</span>
             <span class="info-data lower">
               <ul class="arrow-list">
-                <li>On Premise ou Cloud : AWS, GCP, Azure, Alibaba</li>
+                <li>On Premise / Cloud</li>
+                <li>AWS, GCP, Azure, Alibaba</li>
               </ul>
             </span>
           </div>
@@ -99,7 +100,7 @@ order: 1
             <span class="info-icon">i</span>
             <span class="info-data center">
               <ul class="arrow-list">
-                <li>Identité et accès</li>
+                <li>Identité et authentification</li>
                 <li>Performances</li>
                 <li>Sécurité</li>
               </ul>
