fix: retours vu en réunion (1)

--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -101,11 +101,11 @@ order: 3
 
     <div class="row align-items-center dm-item sm-reverse">
       <div class="col-md-4 offset-md-1 col-sm-12 offset-sm-0 text-center">
-        <img class="bretagne" alt="" src="/assets/images/website/page-dm/servir/Bretagne.svg"/>
+        <img class="bretagne" alt="" src="/assets/images/website/page-dm/servir/Bretagne.png"/>
       </div>
       <div class="col-md-6 col-sm-12">
-        <h2>Implantés à Rennes et Lannion</h2>
-        <p class="text-justify">Aujourd’hui, nous sommes implantés sur <b>Rennes</b> (locaux à Cesson-Sévigné) et <b>Lannion</b> (en espace de co-working pour l’instant).</p>
+        <h2>Implantés à Rennes</h2>
+        <p class="text-justify">Aujourd’hui, nous sommes implantés sur <b>Rennes</b> (locaux à Cesson-Sévigné).</p>
       </div>
     </div>
 
@@ -134,18 +134,38 @@ order: 3
 
     <hr />
 
-    <div class="row align-items-center dm-item sm-reverse">
+    <div class="row align-items-center dm-item sm-remove-img">
       <div class="col-md-3 col-sm-12 text-center">
         <img class="w-100" alt="" src="/assets/images/website/page-dm/servir/Handshake.svg"/>
       </div>
       <div class="col-md-8 offset-md-1 col-sm-12">
         <h2>Soutien aux associations et réseaux locaux</h2>
         <p>Parce qu'ils accompagnent et fédèrent l'IT et l'innovation dans la région, DEVmachine soutient ces acteurs.</p>
-        <ul class="arrow-list">
-          <li><b>Institutionnels</b> : Le Poool, Anticipa, Bretagne Développement Innovation</li>
-          <li><b>Professionnels</b> : ADN’Ouest</li>
-          <li><b>Technologiques</b> : BreizhCamp, meetup Software Craftsmanship de Rennes</li>
-        </ul>
+
+        <div class="local-item">
+          <ul class="arrow-list"><li><b>Institutionnels</b></li></ul>
+          <div class="logos-container">
+            <img title="Le Poool" alt="Le Poool" src="/assets/images/website/page-dm/local/institutionnels/poool.png" />
+            <img title="Anticipa" alt="Anticipa" src="/assets/images/website/page-dm/local/institutionnels/anticipa.png" />
+            <img title="Bretagne Développement Innovation" alt="Bretagne Développement Innovation" src="/assets/images/website/page-dm/local/institutionnels/bdi.jfif" />
+            <img title="Produit en Bretagne" alt="Produit en Bretagne" src="/assets/images/website/page-dm/local/institutionnels/produit-en-bretagne.png" />
+          </div>
+        </div>
+
+        <div class="local-item">
+          <ul class="arrow-list"><li><b>Professionnels</b></li></ul>
+          <div class="logos-container">
+            <img title="ADN’Ouest" alt="ADN’Ouest" src="/assets/images/website/page-dm/local/professionnels/adn-ouest.png" />
+          </div>
+        </div>
+
+        <div class="local-item">
+          <ul class="arrow-list"><li><b>Technologiques</b></li></ul>
+          <div class="logos-container">
+            <img title="BreizhCamp" alt="BreizhCamp" src="/assets/images/website/page-dm/local/technologiques/breizhcamp.png" />
+            <img title="Meetup Software Crafts-wo-manship de Rennes" alt="meetup Software Crafts-wo-manship de Rennes" src="/assets/images/website/page-dm/local/technologiques/craftmanship.jpeg" />
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -169,6 +189,7 @@ order: 3
       <div class="rse-subitems">
         <span class="col-lg-3 col-md-6 col-sm-12 info">
           <p>Conditions de travail</p>
+          <!-- <span class="info-icon">i</span> -->
           <div class="rse-onhover-items">
             <ul class="arrow-list">
               <li>Poste de travail / matériel :</li>
@@ -176,7 +197,7 @@ order: 3
                   <li>Chacun est libre de choisir son matériel, son IDE, sa souris, son nombre d’écrans.</li>
                   <li>Bureaux assis-debout, chaises de bureaux inclinables et à roulettes, chaise ballon à la demande</li>
                 </ul>
-              <li>Locaux spacieux et lumineux, entourés de verdure (photos)</li>
+              <li>Locaux spacieux et lumineux, entourés de verdure</li>
               <li>Télétravail sans limites basse/haute, dès la création de la société et bien avant le premier confinement en 2020.</li>
               <li>Cuisine équipée pour prendre ses repas sur place le midi</li>
             </ul>
@@ -193,7 +214,7 @@ order: 3
           </div>
         </span>
         <span class="col-lg-3 col-md-6 col-sm-12 info">
-          <p>Santé psychologique</p>
+          <p>Bien-être au travail</p>
           <div class="rse-onhover-items">
             <ul class="arrow-list">
               <li>Implication de tous dans la co-construction de DEVmachine, et dans la stratégie de développement de DEVmachine (Comité d’Orientation)</li>
@@ -240,8 +261,6 @@ order: 3
               <li>Achats de produits biologiques et équitables</li>
               <li>Suppression des goodies inutiles</li>
               <li>Pas de gobelets plastiques</li>
-              <li>Consommation de l’eau du robinet</li>
-              <li>Mise en place d’interrupteurs sur les prises électriques pour éviter de mettre le matériel en veille</li>
             </ul>
           </div>
         </span>
