--- a/pages/offre.html
+++ b/pages/offre.html
@@ -58,8 +58,8 @@ order: 1
             <span class="info-icon">i</span>
             <span class="info-data">
               <ul class="arrow-list">
+                <li>Agilité</li>
                 <li>Industrialisation</li>
-                <li>Automatisation</li>
               </ul>
             </span>
           </div>
@@ -87,7 +87,7 @@ order: 1
             <span class="info-data lower">
               <ul class="arrow-list">
                 <li>On Premise / Cloud</li>
-                <li>AWS, GCP, Azure, Alibaba</li>
+                <li>Monitoring / Supervision</li>
               </ul>
             </span>
           </div>
@@ -103,6 +103,7 @@ order: 1
                 <li>Identité et authentification</li>
                 <li>Performances</li>
                 <li>Sécurité</li>
+                <li>Éco-conception</li>
               </ul>
             </span>
           </div>
@@ -244,11 +245,11 @@ order: 1
       </div>
 
       <div class="info">
-        <h1 class="title">6 - Je souhaite déployer dans le Cloud ou sur les stores, ou automatiser les déploiements</h1>
+        <h1 class="title">6 - Je souhaite déployer dans le Cloud ou sur les stores, automatiser les déploiements</h1>
         <ul class="arrow-list description">
           <li>DevOps</li>
-          <li>AWS, GCP, Alibaba, Azure, PlayStore, AppStore</li>
-          <li>Docker, Kubernetes</li>
+          <li>AWS, GCP, Alibaba, Azure, ...</li>
+          <li>PlayStore, AppStore, ...</li>
         </ul>
 
         <div class="row logo-entreprise-container">
