feat: logo clients + desc

--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -189,7 +189,7 @@ order: 3
       <div class="rse-subitems">
         <span class="col-lg-3 col-md-6 col-sm-12 info">
           <p>Conditions de travail</p>
-          <!-- <span class="info-icon">i</span> -->
+          <span class="info-icon">i</span>
           <div class="rse-onhover-items">
             <ul class="arrow-list">
               <li>Poste de travail / matériel :</li>
@@ -205,6 +205,7 @@ order: 3
         </span>
         <span class="col-lg-3 col-md-6 col-sm-12 info">
           <p>Partage des richesses</p>
+          <span class="info-icon">i</span>
           <div class="rse-onhover-items">
             <ul class="arrow-list">
               <li>Contrat d’intéressement : comme décidé à la création de la société, nous avons signé avant les 2 ans d’existence de DEVmachine, le contrat d’intéressement pour redistribuer aux salariés une part significative des bénéfices réalisés par l’entreprise, à part égale quel que soit la fonction et le salaire de chacun.</li>
@@ -215,6 +216,7 @@ order: 3
         </span>
         <span class="col-lg-3 col-md-6 col-sm-12 info">
           <p>Bien-être au travail</p>
+          <span class="info-icon">i</span>
           <div class="rse-onhover-items">
             <ul class="arrow-list">
               <li>Implication de tous dans la co-construction de DEVmachine, et dans la stratégie de développement de DEVmachine (Comité d’Orientation)</li>
@@ -224,6 +226,7 @@ order: 3
         </span>
         <span class="col-lg-3 col-md-6 col-sm-12 info">
           <p>Développement des compétences</p>
+          <span class="info-icon">i</span>
           <div class="rse-onhover-items shift-left">
             <ul class="arrow-list">
               <li>Présentations internes de technologies, solutions et bonnes pratiques</li>
@@ -244,6 +247,7 @@ order: 3
       <div class="rse-subitems">
         <span class="col-lg-4 col-md-6 col-sm-12 info">
           <p>Limitation des temps de trajets et de la circulation automobile</p>
+          <span class="info-icon">i</span>
           <div class="rse-onhover-items">
             <ul class="arrow-list">
               <li>Choix collectif de la localisation des locaux au plus près des domiciles de l’équipe et à proximité immédiate des transports en commun (bus, train) et des services de restauration.</li>
@@ -255,6 +259,7 @@ order: 3
         </span>
         <span class="col-lg-4 col-md-6 col-sm-12 info">
           <p>Consommation vertueuse / tri</p>
+          <span class="info-icon">i</span>
           <div class="rse-onhover-items">
             <ul class="arrow-list">
               <li>Tri sélectif, recyclage des déchets</li>
@@ -265,12 +270,17 @@ order: 3
           </div>
         </span>
         <span class="col-lg-4 offset-lg-0 col-md-6 offset-md-3 col-sm-12 info">
-          <p>Soutien à des actions en faveur de l’environnement ou de programmes humanitaires</p>
+          <p>Soutien à des actions en faveur de l’environnement</p>
+          <span class="info-icon">i</span>
           <div class="rse-onhover-items shift-left">
-            <ul class="arrow-list">
-              <li>Depuis 2021, DEVmachine est actionnaire du fonds d’investissement Time for the planet https://www.time-planet.com/fr pour financer des programmes en faveur de la lutte contre le réchauffement climatique.</li>
-              <li>DEVmachine a participé pour la 1ère fois au Marathon Vert de Rennes en 2021 : "1km parcouru = 1 arbre planté"</li>
+            
+            <div class="with-img">
+              <img alt="" src="/assets/images/website/page-dm/rse/logos/timefortheplanet.png" />
+              <ul class="arrow-list">
+                <li>Depuis 2021, DEVmachine est actionnaire du fonds d’investissement <a href="https://www.time-planet.com/fr" target="_blank">Time For The Planet</a> pour financer des programmes en faveur de la lutte contre le réchauffement climatique.</li>
+                <li>DEVmachine a participé pour la 1ère fois au Marathon Vert de Rennes en 2021 : "1km parcouru = 1 arbre planté"</li>
             </ul>
+            </div>
           </div>
         </span>
       </div>
@@ -284,14 +294,22 @@ order: 3
       <div class="rse-subitems">
         <span class="col-md-6 col-sm-12 info">
           <p>Insertion professionnelle</p>
+          <span class="info-icon">i</span>
           <div class="rse-onhover-items">
-            DEVmachine fait appel à <a href="https://www.adapei35.com/etablissement/esat-rennes-utopi-cesson-sevigne/" target="_blank">Utopi</a> pour les prestations de nettoyage de ses locaux.
+            <div class="with-img">
+              <img alt="" src="/assets/images/website/page-dm/rse/logos/utopi.svg" />
+              <p>DEVmachine fait appel à <a href="https://www.adapei35.com/etablissement/esat-rennes-utopi-cesson-sevigne/" target="_blank">Utopi</a> pour les prestations de nettoyage de ses locaux.</p>
+            </div>
           </div>
         </span>
         <span class="col-md-6 col-sm-12 info">
           <p>Lutte contre l'exclusion</p>
+          <span class="info-icon">i</span>
           <div class="rse-onhover-items">
-            Depuis sa création, DEVmachine reverse sa taxe d’apprentissage à l’association <a href="https://www.fondationface.org/" target="_blank">FACE</a> (Fondation Agir Contre l’Exclusion).
+            <div class="with-img">
+              <img alt="" src="/assets/images/website/page-dm/rse/logos/face.png" />
+              <p>Depuis sa création, DEVmachine reverse sa taxe d’apprentissage à l’association <a href="https://www.fondationface.org/" target="_blank">FACE</a> (Fondation Agir Contre l’Exclusion).</p>
+            </div>
           </div>
         </span>
       </div>
