--- a/pages/offre.html
+++ b/pages/offre.html
@@ -130,7 +130,14 @@ order: 1
         
         <div class="row logo-entreprise-container">
           <div class="logo-entreprise">
-            <img alt="" src="/assets/images/website/page-offre/prestations/logos/tysilio.png" />
+            <img alt="Tysilio" src="/assets/images/website/page-offre/prestations/logos/1/tysilio.png" />
+            <span class="info-icon">i</span>
+            <div class="desc-on-hover">Accompagnement à la création d'un produit : maquettes, cahier des charges, backlog et macro-chiffrage</div>
+          </div>
+          <div class="logo-entreprise">
+            <img alt="Rescue" src="/assets/images/website/page-offre/prestations/logos/1/rescue.png" />
+            <span class="info-icon">i</span>
+            <div class="desc-on-hover">Accompagnement à la création d'un produit : définition des personas, rédaction du backlog</div>
           </div>
         </div>
       </div>
@@ -158,14 +165,35 @@ order: 1
         </ul>
 
         <div class="row logo-entreprise-container">
-          <div class="logo-entreprise">
-            <img alt="" src="/assets/images/website/page-offre/prestations/logos/dome.svg" />
-          </div>
-          <div class="logo-entreprise">
-            <img alt="" src="/assets/images/website/page-offre/prestations/logos/sharly.svg" />
-          </div>
           <div class="logo-entreprise bg-blue">
-            <img alt="" src="/assets/images/website/page-offre/prestations/logos/biocoop.png" />
+            <img alt="Biocoop" src="/assets/images/website/page-offre/prestations/logos/2/biocoop.png" />
+            <span class="info-icon">i</span>
+            <div class="desc-on-hover">Développement forfaitaire d'une application Web de gestion</div>
+          </div>
+          <div class="logo-entreprise">
+            <img alt="Dôme" src="/assets/images/website/page-offre/prestations/logos/2/dome.svg" />
+            <span class="info-icon">i</span>
+            <div class="desc-on-hover">Reprise en main de la maintenance évolutive, corrective et du support d'applications Web de gestion. Développement de nouveaux modules applicatifs</div>
+          </div>
+          <div class="logo-entreprise">
+            <img alt="Le Poool" src="/assets/images/website/page-offre/prestations/logos/2/poool.png" />
+            <span class="info-icon">i</span>
+            <div class="desc-on-hover">Développement et évolutions de briques fonctionnelles du Système d'Informations : espace adhérent, annuaire, ...</div>
+          </div>
+          <div class="logo-entreprise">
+            <img alt="Sharly" src="/assets/images/website/page-offre/prestations/logos/2/sharly.svg" />
+            <span class="info-icon">i</span>
+            <div class="desc-on-hover">"CTO as a Service" : architecture, développement, déploiement et infogérance d'une solution innovante</div>
+          </div>
+          <div class="logo-entreprise">
+            <img alt="IFIP" src="/assets/images/website/page-offre/prestations/logos/2/ifip.jpg" />
+            <span class="info-icon">i</span>
+            <div class="desc-on-hover">Développement forfaitaire d'une application mobile de diagnostic</div>
+          </div>
+          <div class="logo-entreprise">
+            <img alt="CoopSaveurs" src="/assets/images/website/page-offre/prestations/logos/2/coopsaveurs.png" />
+            <span class="info-icon">i</span>
+            <div class="desc-on-hover">Développement forfaitaire d'une application mobile B2C et de ses back-offices</div>
           </div>
         </div>
       </div>
@@ -182,7 +210,14 @@ order: 1
 
         <div class="row logo-entreprise-container">
           <div class="logo-entreprise">
-            <img alt="" src="/assets/images/website/page-offre/prestations/logos/mgdis.png" />
+            <img alt="MGDIS" src="/assets/images/website/page-offre/prestations/logos/3/mgdis.png" />
+            <span class="info-icon">i</span>
+            <div class="desc-on-hover">Renfort distant de l'équipe de développement, dans un contexte agile et industrialisé</div>
+          </div>
+          <div class="logo-entreprise bg-white">
+            <img alt="MonEmprunt" src="/assets/images/website/page-offre/prestations/logos/3/monemprunt.png" />
+            <span class="info-icon">i</span>
+            <div class="desc-on-hover">Renfort ponctuel pour initier un refactoring technique, assurer la migration dans le Cloud, et contribuer au développement d'un nouveau vertical métier</div>
           </div>
         </div>
       </div>
@@ -208,7 +243,24 @@ order: 1
 
         <div class="row logo-entreprise-container">
           <div class="logo-entreprise">
-            <img alt="" src="/assets/images/website/page-offre/prestations/logos/dome.svg" />
+            <img alt="Dôme" src="/assets/images/website/page-offre/prestations/logos/4/dome.svg" />
+            <span class="info-icon">i</span>
+            <div class="desc-on-hover">Refactoring progressif des applications pour désengorger la dette technique</div>
+          </div>
+          <div class="logo-entreprise bg-blue">
+            <img alt="Cooperl" src="/assets/images/website/page-offre/prestations/logos/4/cooperl.svg" />
+            <span class="info-icon">i</span>
+            <div class="desc-on-hover">Réalisation de migrations techiques en environnement Java</div>
+          </div>
+          <div class="logo-entreprise">
+            <img alt="ArcheMC2" src="/assets/images/website/page-offre/prestations/logos/4/arche-mc2.webp" />
+            <span class="info-icon">i</span>
+            <div class="desc-on-hover">Etude d'impacts d'un changement de socle technologique pour des applications Web existantes</div>
+          </div>
+          <div class="logo-entreprise">
+            <img alt="SIPF" src="/assets/images/website/page-offre/prestations/logos/4/sipf.jfif" />
+            <span class="info-icon">i</span>
+            <div class="desc-on-hover">Evolution et migration progressive d'un existant via une solution d'authentification</div>
           </div>
         </div>
       </div>
@@ -225,10 +277,14 @@ order: 1
 
         <div class="row logo-entreprise-container">
           <div class="logo-entreprise">
-            <img alt="" src="/assets/images/website/page-offre/prestations/logos/cooperl.svg" />
+            <img alt="Cooperl" src="/assets/images/website/page-offre/prestations/logos/5/cooperl.svg" />
+            <span class="info-icon">i</span>
+            <div class="desc-on-hover">Mise en place des outils de CI/CD, support infra. à une équipe de développeurs</div>
           </div>
           <div class="logo-entreprise bg-white">
-            <img alt="" src="/assets/images/website/page-offre/prestations/logos/sharly.svg" />
+            <img alt="Sharly" src="/assets/images/website/page-offre/prestations/logos/5/sharly.svg" />
+            <span class="info-icon">i</span>
+            <div class="desc-on-hover">Gestion de projet en Kanban, automatisation des déploiements AppStore, PlayStore et web</div>
           </div>
         </div>
       </div>
@@ -254,10 +310,19 @@ order: 1
 
         <div class="row logo-entreprise-container">
           <div class="logo-entreprise bg-blue">
-            <img alt="" src="/assets/images/website/page-offre/prestations/logos/cooperl.svg" />
+            <img alt="Cooperl" src="/assets/images/website/page-offre/prestations/logos/6/cooperl.svg" />
+            <span class="info-icon">i</span>
+            <div class="desc-on-hover">Gestion des déploiements, mise en place et maintenance d'une solution de monitoring, gestion de clusters Kubernetes managés</div>
           </div>
           <div class="logo-entreprise">
-            <img alt="" src="/assets/images/website/page-offre/prestations/logos/ouest-france.svg" />
+            <img alt="BuildData" src="/assets/images/website/page-offre/prestations/logos/6/build-data.png" />
+            <span class="info-icon">i</span>
+            <div class="desc-on-hover">Etude et mise en place d'une solution d'orchestration pour améliorer le déploiement d'une application</div>
+          </div>
+          <div class="logo-entreprise">
+            <img alt="Dôme" src="/assets/images/website/page-offre/prestations/logos/6/dome.svg" />
+            <span class="info-icon">i</span>
+            <div class="desc-on-hover">Automatisation des builds des applications mobiles iOS et Android en marque blanche. <a>Détails dans l'article de blog</a></div>
           </div>
         </div>
       </div>
