feat: lien vers articles de blog

--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -147,8 +147,8 @@ order: 3
           <div class="logos-container">
             <img title="Le Poool" alt="Le Poool" src="/assets/images/website/page-dm/local/institutionnels/poool.png" />
             <img title="Anticipa" alt="Anticipa" src="/assets/images/website/page-dm/local/institutionnels/anticipa.png" />
-            <img title="Bretagne Développement Innovation" alt="Bretagne Développement Innovation" src="/assets/images/website/page-dm/local/institutionnels/bdi.jfif" />
-            <img title="Produit en Bretagne" alt="Produit en Bretagne" src="/assets/images/website/page-dm/local/institutionnels/produit-en-bretagne.png" />
+            <img title="Bretagne Développement Innovation" alt="Bretagne Développement Innovation" src="/assets/images/website/page-dm/local/institutionnels/bdi.png" />
+            <img title="Produit en Bretagne" alt="Produit en Bretagne" src="/assets/images/website/page-dm/local/institutionnels/produit-bretagne2.png" />
           </div>
         </div>
 
