feat: add dm story

--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -33,6 +33,26 @@ order: 3
   </div>
 </section>
 
+<section id="dm-genese">
+  <div class="container">
+    <div class="row">
+      <h1 class="section-heading">Génèse du projet d'entreprise</h1>
+    </div>
+
+    <div class="row">
+      <p>DEVmachine a été créée par 3 anciens collègues portant des valeurs communes et ayant une très forte complémentarité :</p>
+      <ul class="arrow-list">
+        <li>sur leur domaine de compétences : commerce, projets, technique</li>
+        <li>générationnelle : 1/2 génération d'écart entre chacun d'eux</li>
+        <li>1 femme et 2 hommes</li>
+      </ul>
+      <p>Ce socle "valeurs - complémentarité" reste le moteur du développement de DEVmachine : l'exigence et le sens du service apportent la qualité de service, le collectif décide, et l'équipe DEVmachine partage un lieu de travail où il fait bon vivre.</p>
+    </div>
+  </div>
+</section>
+
+<section id="dm-separate"></section>
+
 <section id="dm-force">
   <div class="container">
     <div class="row">
@@ -105,7 +125,7 @@ order: 3
       </div>
       <div class="col-md-6 col-sm-12">
         <h2>Implantés à Rennes</h2>
-        <p class="text-justify">Aujourd’hui, nous sommes implantés sur <b>Rennes</b> (locaux à Cesson-Sévigné).</p>
+        <p class="text-justify">Nos locaux sont situés à Rennes / Cesson-Sévigné, capitale bretonne de l'innovation et de l'IT.</p>
       </div>
     </div>
 
