feat: photo fondateurs

--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -39,14 +39,21 @@ order: 3
       <h1 class="section-heading">Génèse du projet d'entreprise</h1>
     </div>
 
-    <div class="row">
-      <p>DEVmachine a été créée par 3 anciens collègues portant des valeurs communes et ayant une très forte complémentarité :</p>
-      <ul class="arrow-list">
-        <li>sur leur domaine de compétences : commerce, projets, technique</li>
-        <li>générationnelle : 1/2 génération d'écart entre chacun d'eux</li>
-        <li>1 femme et 2 hommes</li>
-      </ul>
-      <p>Ce socle "valeurs - complémentarité" reste le moteur du développement de DEVmachine : l'exigence et le sens du service apportent la qualité de service, le collectif décide, et l'équipe DEVmachine partage un lieu de travail où il fait bon vivre.</p>
+    <div class="row align-items-center">
+      <div class="col-lg-4 col-md-12">
+        <div class="fondateurs">
+          <img alt="" src="/assets/images/website/page-dm/genese/fondateurs.jpg" />
+        </div>
+      </div>
+      <div class="col-lg-8 col-md-12">
+        <p class="text-justify">DEVmachine a été créée par 3 anciens collègues portant des valeurs communes et ayant une très forte complémentarité :</p>
+        <ul class="arrow-list">
+          <li><b>Sur leur domaine de compétences</b> : commerce, projets, technique</li>
+          <li><b>Générationnelle</b> : 1/2 génération d'écart entre chacun d'eux</li>
+          <li><b>1 femme et 2 hommes</b></li>
+        </ul>
+        <p class="text-justify">Ce socle "valeurs - complémentarité" reste le moteur du développement de DEVmachine : l'exigence et le sens du service apportent la qualité de service, le collectif décide, et l'équipe DEVmachine partage un lieu de travail où il fait bon vivre.</p>
+      </div>
     </div>
   </div>
 </section>
