fix: title stack tech

--- a/pages/savoir-faire.html
+++ b/pages/savoir-faire.html
@@ -75,7 +75,7 @@ order: 2
   <div class="container">
 
     <div class="row">
-      <h1 class="section-heading">Nos stack techniques</h1>
+      <h1 class="section-heading">Nos compétences techniques</h1>
     </div>
 
     <div class="col-12">
