--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -52,7 +52,7 @@ order: 3
           <li><b>Générationnelle</b> : 1/2 génération d'écart entre chacun d'eux</li>
           <li><b>1 femme et 2 hommes</b></li>
         </ul>
-        <p class="text-justify">Ce socle "valeurs - complémentarité" reste le moteur du développement de DEVmachine : l'exigence et le sens du service apportent la qualité de service, le collectif décide, et l'équipe DEVmachine partage un lieu de travail où il fait bon vivre.</p>
+        <p class="text-justify">Ce socle "valeurs - complémentarité" reste le moteur du développement de DEVmachine : l'exigence et le sens du service apportent la qualité nécessaire, le collectif décide et l'équipe DEVmachine partage un lieu de travail où il fait bon vivre.</p>
       </div>
     </div>
   </div>
